------------------------------------------------------------------------------
This file is used to record changes made to the CVS database. Please add to
the top of this file before committing any changes. Please use the header
format provided for each entry.

Al
------------------------------------------------------------------------------

Sun Jun 24 23:01:09 GMT 2001	Harry Kalogirou <harkal@rainbow.cs.unipi.gr>
	* implemented do_mknod()
	* Some fixes in AF_UNIX sockets.
	* socket.state changed to unsighed char to solve compiler problems
	* Modified ntty.c and serial.c to support "raw" mode required for
	  networking
	* Now serial baud rate is set to the default on init and not open
	* tty_charout now blocks the right way if queue is full in ntty.c
	* Modified tty_read() in ntty.c
	* Merged in TCP/IP code
	* Fixed bug in do_select(). The new wait_set() expects current->waitpt
	  to be null. The do_select() didn't honor that.

Wed Jun 20 23:21:51 BST 2001    Alan Cox  <alan@redhat.com>
	* Merged fix for sycall.dat error I made (fix by Harry Kalogirou)
	* Merged Riley's first Configure changes

Mon Jun 18 00:18:55 BST 2001	Alan Cox  <alan@redhat.com>
	* Fixed bugs in the new tty select code
	* Added select to pty
	* Added register keywords to malloc.c to save memory
	* Fixed double indirection (> 512Kbytes) on minixfs

Sun Jun 17 19:47:58 BST 2001	Alan Cox  <alan@redhat.com>
	* Moved common code into minix_set_ops - based on a 2.4 change
	  from mainstream by Al Viro
	* Chop ltype down to 16 bytes - with our tiny stack 256 is crazy
	* Remove shlib stuff from fs/exec.c move file onto stack

Sun Jun 17 18:38 BST 2001   Alistair Riddoch  <alriddoch@zepler.org>
	* Resolved some minor clashes between Alan's commit and Thomas's
	  fix.
	* Bumped up version to 0.0.84 for release.

Sun Jun 17 11:20:06 BST 2001   Alan Cox  <alan@redhat.com>
	* Abolished the suid config option
	* Merged stuff to reduce the ifdef clutter a bit